# PowerShell-Exec-MCP-Server

./: Dockerfile  FEATURES_UPDATE.md  GITHUB_TEMPLATES_SETUP.md  README.md  SAMPLE_COPILOT_ISSUE.md  __init__.py  __main__.py  pyproject.toml  run.py  server.py  setup.py  smithery.yaml  test_bigfix_tools.py  test_features.py
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  copilot_task.yml  documentation.yml  feature_request.yml
.github/workflows/: copilot-validation.yml
mcp_powershell_exec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: basic_script.ps1  bigfix_action.ps1  bigfix_relevance.ps1  intune_detection.ps1  intune_remediation.ps1  system_inventory.ps1
