[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-powershell-exec"
version = "0.2.0"
description = "MCP server for secure PowerShell command execution with modern features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.9.0",
    "psutil>=5.9.0",
]

[project.scripts]
mcp-powershell-exec = "mcp_powershell_exec.__main__:main"
